--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 						<label for="passwd">密码：</label><br>
 						<input name="password" type="password" id="passwd" class="inputText"><br>
 						<button class="loginBtn">登录</button>
-                        <a href="register" class="registerBtn">注册</a>
+                        <button href="register" type="button" id="registerBtn" onclick="window.location.href='register'">注册</button>
 					</form>
 				</div>
 			</div>
