--- a/src/main/resources/templates/equip/list.html
+++ b/src/main/resources/templates/equip/list.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>家庭成员列表</title>
+		<title>设备列表p</title>
 		<!-- Bootstrap core CSS -->
 		<link  th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
@@ -45,45 +45,45 @@
 	<body>
 		<!--引入抽取的topbar-->
 		<!--模板名：会使用thymeleaf的前后缀配置规则进行解析-->
-		<div th:replace="commons/bar::topbar(title=${family.familyName})"></div>
+		<div th:replace="commons/bar::topbar(title='设备控制台')"></div>
 
 		<div class="container-fluid">
 			<div class="row">
 				<!--引入侧边栏-->
-				<div th:replace="commons/bar::#sidebar(activeUri='family')"></div>
+				<div th:replace="commons/bar::#sidebar(activeUri='equip')"></div>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h2><a class="btn btn-sm btn-success"  th:href="@{/family/add}">添加成员</a></h2>
-					<h4 class="btn btn-sm btn-success" th:if="${familymsg}" th:text="${familymsg}"></h4>
+					<h2><a class="btn btn-sm btn-success"  th:href="@{/equip/add}">添加设备</a></h2>
+					<h4 class="btn btn-sm btn-success" th:if="${equipmsg}" th:text="${equipmsg}"></h4>
 					<div class="table-responsive">
 						<table class="table table-striped table-sm">
 							<thead>
 								<tr>
-									<th>#</th>
-									<th>用户名</th>
-									<th>邮箱</th>
-									<th>电话</th>
-									<th>生日</th>
+									<th>equipId</th>
+									<th>locLongitude</th>
+									<th>locLatitude</th>
+									<th>waterUsage</th>
+									<th>equipState</th>
 									<th>操作</th>
 								</tr>
 							</thead>
 							<tbody>
-								<tr th:each="user:${users}">
-									<td th:text="${user.id}"></td>
-									<td th:text="${user.username}"></td>
-									<td th:text="${user.email}"></td>
-									<td th:text="${user.phoneNumber}"></td>
-									<td th:text="${#dates.format(user.birth, 'yyyy-MM-dd HH:mm')}"></td>
+								<tr th:each="equip:${equips}">
+									<td th:text="${equip.equipId}"></td>
+									<td th:text="${equip.locLongitude}"></td>
+									<td th:text="${equip.locLatitude}"></td>
+									<td th:text="${equip.waterUsage}"></td>
+									<td th:text="${equip.equipState}"></td>
 									<td>
 										<!--<a class="btn btn-sm btn-primary" th:href="@{/family/}+${user.id}">编辑</a>-->
-										<button th:attr="del_uri=@{/family/}+${user.id}" class="btn btn-sm btn-danger deleteBtn">删除</button>
+										<button th:attr="del_uri=@{/equip/}+${equip.equipId}" class="btn btn-sm btn-danger deleteBtn">删除</button>
 									</td>
 								</tr>
 							</tbody>
 						</table>
 					</div>
 				</main>
-				<form id="deleteUserForm"  method="post">
+				<form id="deleteEquipForm"  method="post">
 					<input type="hidden" name="_method" value="delete"/>
 				</form>
 			</div>
@@ -104,7 +104,7 @@
 		<script>
 			$(".deleteBtn").click(function(){
 			    //删除当前员工的
-			    $("#deleteUserForm").attr("action",$(this).attr("del_uri")).submit();
+			    $("#deleteEquipForm").attr("action",$(this).attr("del_uri")).submit();
 			    return false;
             });
 		</script>
