--- a/src/main/resources/templates/equip/list.html
+++ b/src/main/resources/templates/equip/list.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>设备列表p</title>
+		<title>终端水系统</title>
 		<!-- Bootstrap core CSS -->
 		<link  th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
@@ -76,7 +76,7 @@
 									<td th:text="${equip.equipState}"></td>
 									<td>
 										<!--<a class="btn btn-sm btn-primary" th:href="@{/family/}+${user.id}">编辑</a>-->
-										<button th:attr="del_uri=@{/equip/}+${equip.equipId}" class="btn btn-sm btn-danger deleteBtn">删除</button>
+										<button th:if="${#request.getRemoteUser()}==${family.admin}" th:attr="del_uri=@{/equip/}+${equip.equipId}" class="btn btn-sm btn-danger deleteBtn">删除</button>
 									</td>
 								</tr>
 							</tbody>
