--- a/src/main/resources/templates/family/list.html
+++ b/src/main/resources/templates/family/list.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>家庭成员列表</title>
+		<title>终端水系统</title>
 		<!-- Bootstrap core CSS -->
 		<link  th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
@@ -45,7 +45,7 @@
 	<body>
 		<!--引入抽取的topbar-->
 		<!--模板名：会使用thymeleaf的前后缀配置规则进行解析-->
-		<div th:replace="commons/bar::topbar(title=${family.familyName})"></div>
+		<div th:replace="commons/bar::topbar(title=${family!=null}?${family.familyName}:'家庭组')"></div>
 
 		<div class="container-fluid">
 			<div class="row">
@@ -53,7 +53,10 @@
 				<div th:replace="commons/bar::#sidebar(activeUri='family')"></div>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h2><a class="btn btn-sm btn-success"  th:href="@{/family/add}">添加成员</a></h2>
+					<div th:if="${family!=null}" >
+					<h2><a class="btn btn-sm btn-success" th:if="${#request.getRemoteUser()}==${family.admin}"  th:href="@{/family/add}">添加成员</a></h2>
+					</div>
+					<h2><a class="btn btn-sm btn-success" th:if="${family==null}"  th:href="@{/family/create}">创建家庭组</a></h2>
 					<h4 class="btn btn-sm btn-success" th:if="${familymsg}" th:text="${familymsg}"></h4>
 					<div class="table-responsive">
 						<table class="table table-striped table-sm">
@@ -68,7 +71,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr th:each="user:${users}">
+								<tr th:if="${users!=null}" th:each="user:${users}">
 									<td th:text="${user.id}"></td>
 									<td th:text="${user.username}"></td>
 									<td th:text="${user.email}"></td>
@@ -76,7 +79,9 @@
 									<td th:text="${#dates.format(user.birth, 'yyyy-MM-dd HH:mm')}"></td>
 									<td>
 										<!--<a class="btn btn-sm btn-primary" th:href="@{/family/}+${user.id}">编辑</a>-->
-										<button th:attr="del_uri=@{/family/}+${user.id}" class="btn btn-sm btn-danger deleteBtn">删除</button>
+										<div th:if="${#request.getRemoteUser()}==${family.admin}">
+										<button th:if="${#request.getRemoteUser()}!=${user.getUsername()}"  th:attr="del_uri=@{/family/}+${user.id}" class="btn btn-sm btn-danger deleteBtn">删除</button>
+										</div>
 									</td>
 								</tr>
 							</tbody>
