--- a/src/main/resources/templates/wellcome.html
+++ b/src/main/resources/templates/wellcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example</title>
+    <title>终端水智慧化系统</title>
 </head>
 <body>
 <h1>Welcome![[${#httpServletRequest.remoteUser}]]!</h1>
