--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>登陆</title>
-	<link rel="stylesheet" href="/css/login.css">
+	<link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
 
