--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,10 +13,10 @@
 
 		<title>终端水系统</title>
 		<!-- Bootstrap core CSS -->
-		<link href="/css/bootstrap.min.css" rel="stylesheet">
+		<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
-		<link href="/css/dashboard.css" rel="stylesheet">
+		<link th:href="@{/css/dashboard.css}" rel="stylesheet">
 		<style type="text/css">
 			/* Chart.js */
 			
