完成部分app接口开发
Signed-off-by: waiter2020 <1403976416@qq.com>

--- a/src/main/resources/templates/equip/change.html
+++ b/src/main/resources/templates/equip/change.html
@@ -63,6 +63,10 @@
 						-->
 						<input type="hidden" name="equipId" th:if="${equip!=null}" th:value="${equip.equipId}">
 						<div class="form-group">
+							<label>名称</label>
+							<input name="name" type="text" class="form-control"  th:value="${equip!=null}?${equip.name}">
+						</div>
+						<div class="form-group">
 							<label>纬度</label>
 							<input name="locLatitude" type="number" class="form-control"  th:value="${equip!=null}?${equip.locLatitude}">
 						</div>
