--- a/src/main/resources/templates/wellcome.html
+++ b/src/main/resources/templates/wellcome.html
@@ -7,6 +7,32 @@
 <h1>Welcome![[${#httpServletRequest.remoteUser}]]!</h1>
 
 <p>Click <a th:href="@{/index}">here</a> to see a greeting.</p>
-
+<br/>
+<br/>
+<br/>
+<br/>
+<h1>App下载列表：</h1>
+<div class="table-responsive">
+    <table th:if="${map}!=null" class="table table-striped table-sm" border="1">
+        <thead>
+        <tr>
+            <th>版本</th>
+            <th>描述</th>
+            <th>下载地址</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="m:${map}">
+            <td th:text="${m.getKey()}"></td>
+            <td th:text="${m.getValue()}"></td>
+            <td ><a th:href="@{/download/app}+'?version='+${m.getKey()}">点击下载</a></td>
+            <!--<td>-->
+            <!--&lt;!&ndash;<a class="btn btn-sm btn-primary" th:href="@{/family/}+${user.id}">编辑</a>&ndash;&gt;-->
+            <!--&lt;!&ndash;<button  th:attr="del_uri=@{/water/}+${equip.equipId}" class="btn btn-sm btn-danger deleteBtn">删除</button>&ndash;&gt;-->
+            <!--</td>-->
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
