--- a/src/main/resources/templates/water/list.html
+++ b/src/main/resources/templates/water/list.html
@@ -58,7 +58,7 @@
             <!--<h2><a class="btn btn-sm btn-success"  th:href="@{/equip/add}">添加设备</a></h2>-->
             <form th:action="@{/water}" method="post" class="form-group">
                 <label th:text="选择设备ID "></label>
-                <!--提交的是部门的id-->
+                <!--提交的是设备的id-->
                 <select  name="equipId">
                     <option th:selected="${equipId!=null}?${equipId==equip.equipId}" th:value="${equip.equipId}" th:each="equip:${equips}" th:text="${equip.equipId}">1</option>
                 </select>
@@ -83,8 +83,8 @@
                     <tbody>
                     <tr th:each="waterCondition:${waterConditions}">
                         <td th:text="${waterCondition.watermeterId}"></td>
-                        <td th:text="${#dates.format(waterCondition.startDate, 'yyyy-MM-dd HH:mm')}"></td>
-                        <td th:text="${#dates.format(waterCondition.endDate, 'yyyy-MM-dd HH:mm')}"></td>
+                        <td th:text="${#dates.format(waterCondition.startDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                        <td th:text="${#dates.format(waterCondition.endDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                         <td th:text="${waterCondition.volumn}"></td>
                         <td th:text="${waterCondition.timeUse}"></td>
                         <!--<td>-->
